# ProyectoTecnoII

./: .gitignore  README.md  main.py  pyproject.toml  test_imports.py
configs/: settings.py
notebooks/: 01_environment_setup.ipynb  02_dataset_exploration.ipynb  03_dataset_preprocessing.ipynb  04_training_yolo.ipynb  05_validation_metrics.ipynb  06_image_detection.ipynb  07_video_detection.ipynb  08_realtime_webcam_detection.ipynb  09_voice_alert_system.ipynb  10_final_integration.ipynb
services/: detector.py  model_loader.py  realtime_detection.py  voice_service.py
utils/: camera.py  drawing.py  fps.py  helpers.py  metrics.py  preprocessing.py
