[project]
name = "proyectofinal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyttsx3>=2.99",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=5.9.0",
    "ultralytics>=8.4.54",
]
